--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
    <div class="item item2">Numquam a quisquam pariatur quidem ratione quos ad rerum nisi.</div>
    <div class="item item3">Officia eaque ab rerum, distinctio dignissimos adipisci neque dolores fugit.</div>
    <div class="item item4">Doloribus natus nulla ut delectus dolore</div>
+      <div class="item item4">Doloribus natus nulla ut delectus dolore</div>
+      <div class="item item4">Doloribus natus nulla ut delectus dolore</div>
    <!-- <div class="item item5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, odit.</div>
    <div class="item item6">Numquam a quisquam pariatur quidem ratione quos ad rerum nisi.</div>
    <div class="item item7">Officia eaque ab rerum, distinctio dignissimos adipisci neque dolores fugit.</div>
